<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/text"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/signup_signin"
    android:scrollbarSize="10dp"
    tools:context=".SignupActivity">

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/gradient_view"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="69dp" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="320dp"
        android:layout_height="662dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/rectangle_view"
        android:backgroundTint="#4DFFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view"
        app:layout_constraintVertical_bias="0.788" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:text="Nice to have you join with us!"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.049" />

    <Button
        android:id="@+id/signinBtn1"
        android:layout_width="254dp"
        android:layout_height="52dp"
        android:backgroundTint="@color/white"
        android:fontFamily="sans-serif-medium"
        android:paddingRight="150dp"
        android:text="@string/signin"
        android:textColor="@color/mainColor"
        android:textSize="21dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.156" />

    <Button
        android:id="@+id/button2"
        android:layout_width="135dp"
        android:layout_height="52dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/signup2"
        android:textSize="21dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.735"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.156" />

    <EditText
        android:id="@+id/editTextText"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:textCursorDrawable="@drawable/cursor_color"
        android:ems="10"
        android:inputType="text"
        android:textStyle="bold"
        android:hint="Full Name"
        android:textSize="16dp"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:textColorLink="@color/white"
        android:backgroundTint="#FFFFFFFF"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.263" />

    <Button
        android:id="@+id/signupBtn2"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:background="@drawable/rectangle_button"
        android:text="@string/signup"
        android:textSize="21dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.728" />

    <View
        android:id="@+id/button4"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:background="@drawable/rectangle_button"
        android:backgroundTint="#B3FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.482"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.853" />

    <View
        android:id="@+id/button5"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:background="@drawable/rectangle_button"
        android:backgroundTint="#B3FFFFFF"
        android:text="Continue with Facebook"
        android:textStyle="bold"
        android:textSize="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.482"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.93" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="OR"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="20dp"
        android:fontFamily="sans-serif-black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.784" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:text="Continue with GOOGLE"
        android:textColor="@color/mainColor"
        android:textSize="19dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.84" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textCursorDrawable="@drawable/cursor_color"
        android:fontFamily="sans-serif-black"
        android:text="Continue with Facebook"
        android:textColor="@color/mainColor"
        android:textSize="19dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.914" />

    <EditText
        android:id="@+id/editTextTextUsername"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#FFFFFFFF"
        android:ems="10"
        android:hint="@string/Username"
        android:inputType="text"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textColorLink="@color/white"
        android:textCursorDrawable="@drawable/cursor_color"
        android:textSize="16dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.347" />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#FFFFFFFF"
        android:ems="10"
        android:hint="@string/Email"
        android:inputType="textEmailAddress"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textColorLink="@color/white"
        android:textCursorDrawable="@drawable/cursor_color"
        android:textSize="16dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.441" />

    <EditText
        android:id="@+id/editTextTextPassword2"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#FFFFFFFF"
        android:ems="10"
        android:hint="@string/Password"
        android:inputType="textPassword"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textColorLink="@color/white"
        android:textCursorDrawable="@drawable/cursor_color"
        android:textSize="16dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.529" />

    <EditText
        android:id="@+id/editTextTextPassword3"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#FFFFFFFF"
        android:ems="10"
        android:hint="@string/ReEnterPassword"
        android:inputType="textPassword"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textColorLink="@color/white"
        android:textCursorDrawable="@drawable/cursor_color"
        android:textSize="16dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.625" />


</androidx.constraintlayout.widget.ConstraintLayout>