<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

    <include layout="@layout/card_item" />


    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:layout_marginTop="147dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/slideDot"
        android:layout_marginTop="-15dp"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content"
        android:layout_below="@id/viewPager"
        android:gravity="center" />

    <View
        android:id="@+id/view3"
        android:layout_width="393dp"
        android:layout_height="88dp"
        android:background="@drawable/hometoprectangle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />



    <View
        android:id="@+id/view2"
        android:layout_width="351dp"
        android:layout_height="45dp"
        android:layout_marginTop="95dp"
        android:layout_marginLeft="18dp"
        android:background="@drawable/searchbar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.137" />


    <View
        android:id="@+id/view_2"
        android:layout_width="45dp"
        android:layout_height="35dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="335dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="722dp"
        android:background="@drawable/baseline_notifications_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view_3"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/baseline_settings_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextText2"
        android:layout_width="325dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="95dp"
        android:backgroundTint="@color/mainColor"
        android:drawableRight="@drawable/baseline_search_24"
        android:ems="10"
        android:hint="@string/Search"
        android:inputType="text"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textCursorDrawable="@drawable/cursor_color"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.135" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="111dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="292dp"
        android:layout_marginEnd="266dp"
        android:layout_marginBottom="471dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/HomeCategories"
        android:textSize="17dp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button"
        android:layout_width="109dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="284dp"
        android:layout_marginLeft="350dp"
        android:layout_marginTop="285dp"
        android:layout_marginEnd="0dp"
        android:textStyle="bold"
        android:layout_marginBottom="464dp"
        android:backgroundTint="@color/white"
        android:text="View All"
        android:textColor="@color/mainColor"
        android:textSize="13dp" />

    <View
        android:id="@+id/view4"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="458dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="276dp"
        android:background="@drawable/special_offers"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <View
        android:id="@+id/view_profile"
        android:layout_width="62dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="74dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="256dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="703dp"
        android:background="@drawable/profile_image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="176dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="37dp"
        android:layout_marginTop="467dp"
        android:layout_marginEnd="180dp"
        android:layout_marginBottom="273dp"
        android:text="Special Offers"
        android:textColor="#F60808"
        android:textSize="25dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="166dp"
        android:layout_height="39dp"
        android:layout_marginStart="250dp"
        android:layout_marginTop="467dp"
        android:layout_marginEnd="27dp"
        android:layout_marginBottom="273dp"
        android:textColor="@color/white"
        android:text="20% Off"
        android:fontFamily="sans-serif-black"
        android:textSize="28dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="217dp"
        android:layout_height="471dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="140dp"
        android:layout_marginTop="43dp"
        android:layout_marginEnd="37dp"
        android:layout_marginBottom="698dp"
        android:fontFamily="sans-serif-black"
        android:text="Hello Himasha!"
        android:textColor="@color/white"
        android:textSize="25dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="157dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="515dp"
        android:layout_marginEnd="220dp"
        android:layout_marginBottom="245dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/HomePopular"
        android:textColor="@color/black"
        android:textSize="18dp"
        android:textStyle="bold" />

</RelativeLayout>

